@@ -1,8 +1,12 @@
 package io.appwish.voteservice;
 
+import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
 
+import oi.appwish.voteservice.model.ItemType;
 import oi.appwish.voteservice.model.Vote;
+import oi.appwish.voteservice.model.VoteType;
 import oi.appwish.voteservice.model.input.UpdateVoteInput;
 import oi.appwish.voteservice.model.input.VoteInput;
 import oi.appwish.voteservice.model.query.AllVoteQuery;
@@ -28,11 +32,11 @@ public final class TestData {
    * Some random values to be used to fill Vote fields in tests
    * */
   public static final long SOME_ID = 1;
-  public static final long SOME_AUTHOR_ID = 9999;
-  public static final String SOME_TITLE = "Title1";
-  public static final String SOME_CONTENT = "# Gimme the app!";
-  public static final String SOME_COVER_IMAGE_URL = "https://appvote.org/static/hardcoded";
-  public static final String SOME_VOTE_URL = "https://appvote.org/vote/hardcoded";
+  public static final long SOME_USER_ID = 9999;
+  public static final long SOME_ITEM_ID = 8888;
+  public static final ItemType SOME_ITEM_TYPE = ItemType.WISH;
+  public static final LocalDateTime SOME_CREATED_AT = LocalDateTime.now();
+  public static final VoteType SOME_VOTE_TYPE = VoteType.DOWN;
 
   /**
    * Some random error message
@@ -47,15 +51,15 @@ public final class TestData {
   /**
    * Votees to be reused in tests
    */
-  public static final Vote VOTE_1 = new Vote(SOME_ID, SOME_TITLE, SOME_CONTENT, SOME_COVER_IMAGE_URL, SOME_AUTHOR_ID, SOME_VOTE_URL);
-  public static final Vote VOTE_2 = new Vote(2, "title2", "desc2", "url2", 92, "posturl2");
-  public static final Vote VOTE_3 = new Vote(3, "title3", "desc3", "url3", 93, "posturl3");
-  public static final Vote VOTE_4 = new Vote(4, "title4", "desc4", "url4", 94, "posturl4");
+  public static final Vote VOTE_1 = new Vote(SOME_ID, SOME_USER_ID, SOME_ITEM_ID, SOME_ITEM_TYPE, SOME_CREATED_AT, SOME_VOTE_TYPE);
+  public static final Vote VOTE_2 = new Vote(2, 2020, 2000, ItemType.WISH, LocalDateTime.now(), VoteType.UP);
+  public static final Vote VOTE_3 = new Vote(3, 3030, 3000, ItemType.WISH, LocalDateTime.now(), VoteType.UP);
+  public static final Vote VOTE_4 = new Vote(4, 4040, 4000, ItemType.COMMENT, LocalDateTime.now(), VoteType.DOWN);
 
   /**
-   * List of random votees to be used in tests
+   * List of random votes to be used in tests
    */
-  public static final List<Vote> VOTEES = List.of(VOTE_1, VOTE_2, VOTE_3, VOTE_4);
+  public static final List<Vote> VOTES = Arrays.asList(VOTE_1, VOTE_2, VOTE_3, VOTE_4);
 
   /**
    * All vote query to be used in tests
@@ -66,30 +70,40 @@ public final class TestData {
    * Some random inputs to be used in tests
    */
   public static final VoteInput VOTE_INPUT_1 = new VoteInput(
-    TestData.VOTE_1.getTitle(),
-    TestData.VOTE_1.getContent(),
-    TestData.VOTE_1.getCoverImageUrl());
+    TestData.VOTE_1.getUserId(),
+    TestData.VOTE_1.getItemId(),
+    TestData.VOTE_1.getItemType(),
+    TestData.VOTE_1.getCreatedAt(),
+    TestData.VOTE_1.getVoteType());
   public static final VoteInput VOTE_INPUT_2 = new VoteInput(
-    TestData.VOTE_2.getTitle(),
-    TestData.VOTE_2.getContent(),
-    TestData.VOTE_2.getCoverImageUrl());
+    TestData.VOTE_2.getUserId(),
+    TestData.VOTE_2.getItemId(),
+    TestData.VOTE_2.getItemType(),
+    TestData.VOTE_2.getCreatedAt(),
+    TestData.VOTE_2.getVoteType());
   public static final VoteInput VOTE_INPUT_3 = new VoteInput(
-    TestData.VOTE_3.getTitle(),
-    TestData.VOTE_3.getContent(),
-    TestData.VOTE_3.getCoverImageUrl());
+    TestData.VOTE_3.getUserId(),
+    TestData.VOTE_3.getItemId(),
+    TestData.VOTE_3.getItemType(),
+    TestData.VOTE_3.getCreatedAt(),
+    TestData.VOTE_3.getVoteType());
   public static final VoteInput VOTE_INPUT_4 = new VoteInput(
-    TestData.VOTE_4.getTitle(),
-    TestData.VOTE_4.getContent(),
-    TestData.VOTE_4.getCoverImageUrl());
+    TestData.VOTE_4.getUserId(),
+    TestData.VOTE_4.getItemId(),
+    TestData.VOTE_4.getItemType(),
+    TestData.VOTE_4.getCreatedAt(),
+    TestData.VOTE_4.getVoteType());
 
   /**
    * Some random data for update queries in tests
    */
   public static final UpdateVoteInput UPDATE_VOTE_INPUT = new UpdateVoteInput(
-    VOTE_4.getId(),
-    VOTE_4.getTitle(),
-    VOTE_4.getContent(),
-    VOTE_4.getCoverImageUrl());
+	TestData.VOTE_4.getUserId(),		  
+    TestData.VOTE_4.getUserId(),
+    TestData.VOTE_4.getItemId(),
+    TestData.VOTE_4.getItemType(),
+    TestData.VOTE_4.getCreatedAt(),
+    TestData.VOTE_4.getVoteType());
 
   /**
    * Some data for vote queries in tests
